update telex for message sending across channels